--- a/PrimeiraAplicacao/src/main/resources/application.properties
+++ b/PrimeiraAplicacao/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configurações do banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/usuario
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestaoHotel
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.postgresql.Driver
